--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "eslint-config-next": "13.1.1",
     "file-loader": "^1.1.6",
     "html2canvas": "^1.4.1",
+    "jsonwebtoken": "^9.0.0",
     "lodash": "^4.17.21",
     "lru-cache": "^7.12.0",
     "next": "13.1.1",
@@ -44,6 +45,7 @@
     "@next/eslint-plugin-next": "^13.1.2",
     "@playwright/test": "^1.29.2",
     "@types/jest": "^29.2.5",
+    "@types/jsonwebtoken": "^9.0.1",
     "@types/lodash": "^4.14.191",
     "@types/react-toastify": "^4.1.0",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
